Use Jenkins design library icons (#119)
Use Jenkins design library symbols and colors to favorite actions.

Provide custom action task ui impl that toggles favorite state using background
post request. The `l:task` tag does not support icon classes or the ability to switch
the icon on click.